--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dsj/yii2-adminuser",
+    "name": "huangdingbo/yii2-adminuser",
     "description": "用户管理模块",
     "type": "library",
     "license": "MIT",
